2004-02-06  Andrew Pinski  <pinskia@physics.uc.edu>

PR middle-end/13127
        * tree-inline.c (declare_return_variable): Set the no warning bit
        on the variable created for the return value.

2004-02-06  Andrew Pinski  <pinskia@physics.uc.edu>

        PR middle-end/13127
        * gcc.dg/20040206-1.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/branches/tree-ssa-20020619-branch@77424 138bc75d-0d04-0410-961f-82ee72b054a4